Fixes issue where in MOBILE layout is unreadable
1. postSellOrder || depositAndSell modal - 'Final Confirmation' was unscrollable
2. removes noScroll ONLY on this modal

--- a/src/styles/core/_base.scss
+++ b/src/styles/core/_base.scss
@@ -18,17 +18,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
 #root div.appFlex {
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
-
-  @media #{$mobile} {
-    max-width: 100%;
-    flex-wrap: wrap;
-    padding: 0;
-    height: 100%;
-  }
 }
 
 ::selection {
